Caching DTD doesn't work well....